--- a/index.html
+++ b/index.html
@@ -3496,7 +3496,7 @@
                 <p class="project-text" style="color: #FB8500; text-align: left;"> SKILLS:</p>
                 <p class="skill-text" style="text-align: left;"> OpenCV, PyTorch, HTML/CSS/JS </p>
             </div>
-            <div class = "learn-more"><a href="#Handwriting" class=link-orange"> Click for More Information </a></div>
+            <div class = "learn-more"><a href="#Handwriting" class="link-orange"> Click for More Information </a></div>
             <div id="Handwriting" class="modal">
                 <div class="content">
                     <h2 style="text-align: center;">
@@ -3523,7 +3523,7 @@
                 <p class="skill-text" style="text-align: left;"> GreenFootAPI, Java, Object-Oriented
                     Programming </p>
             </div>
-            <div class = "learn-more"><a href="#Game" class=link-orange"> Click for More Information </a></div>
+            <div class = "learn-more"><a href="#Game" class="link-orange"> Click for More Information </a></div>
             <div id="Game" class="modal">
                 <div class="content">
                     <h2 style="text-align: center;">
@@ -3553,7 +3553,7 @@
                 </p>
                 <p class=" skill-text" style="text-align: left;"> HTML, CSS, JavaScript </p>
             </div>
-            <div class = "learn-more"><a href="#Portfolio" class=link-orange"> Click for More Information </a></div>
+            <div class = "learn-more"><a href="#Portfolio" class="link-orange"> Click for More Information </a></div>
             <div id="Portfolio" class="modal">
                 <div class="content">
                     <h2 style="text-align: center;">
