changed color of pop-up

--- a/index.html
+++ b/index.html
@@ -3298,7 +3298,7 @@
 
             .content {
                 position: absolute;
-                background: #219EBC;
+                background: #011f2f;
                 width: 35vw;
                 padding: 1em 2em;
             }
@@ -3411,7 +3411,7 @@
             <div class = "learn-more"><a href="#Chatbot" class="link-orange"> Click for More Information </a></div>
             <div id="Chatbot" class="modal">
                 <div class="content">
-                    <h2 style="text-align: center;">
+                    <h2 style="text-align: center; color: #8ECAE6;">
                         A chatbot to raise mental health awareness...
                     </h2>
                     <br>
@@ -3441,7 +3441,7 @@
             <div class = "learn-more"><a href="#Knee" class="link-orange"> Click for More Information </a></div>
             <div id="Knee" class="modal">
                 <div class="content">
-                    <h2 style="text-align: center;">
+                    <h2 style="text-align: center; color: #8ECAE6;">
                         A mechanical knee rehabilation technology to help with ACL injury recoveries...
                     </h2>
                     <br>
@@ -3468,7 +3468,7 @@
             <div class = "learn-more"><a href="#Politics" class="link-orange"> Click for More Information </a></roles>
             <div id="Politics" class="modal">
                 <div class="content">
-                    <h2 style="text-align: center;">
+                    <h2 style="text-align: center; color: #8ECAE6;">
                         A web application to raise political participation amongst college students...
                     </h2>
                     <br>
@@ -3499,7 +3499,7 @@
             <div class = "learn-more"><a href="#Handwriting" class="link-orange"> Click for More Information </a></div>
             <div id="Handwriting" class="modal">
                 <div class="content">
-                    <h2 style="text-align: center;">
+                    <h2 style="text-align: center; color: #8ECAE6;">
                         A web application to translate handwriting into legible text...
                     </h2>
                     <br>
@@ -3526,7 +3526,7 @@
             <div class = "learn-more"><a href="#Game" class="link-orange"> Click for More Information </a></div>
             <div id="Game" class="modal">
                 <div class="content">
-                    <h2 style="text-align: center;">
+                    <h2 style="text-align: center; color: #8ECAE6;">
                         An object-oriented-programming-based user engaging video game...
                     </h2>
                     <br>
@@ -3556,7 +3556,7 @@
             <div class = "learn-more"><a href="#Portfolio" class="link-orange"> Click for More Information </a></div>
             <div id="Portfolio" class="modal">
                 <div class="content">
-                    <h2 style="text-align: center;">
+                    <h2 style="text-align: center; color: #8ECAE6;">
                         A personal website designed and created from scratch...
                     </h2>
                     <br>
