adapted to different screens

--- a/index.html
+++ b/index.html
@@ -1075,8 +1075,9 @@
 
             .content {
                 position: absolute;
-                background: #219EBC;
-                width: 35vw;
+                background: #011f2f;
+                width: auto;
+                height: 50vh; 
                 padding: 1em 2em;
             }
 
@@ -1089,9 +1090,16 @@
                 position: absolute;
                 top: 0;
                 right: 15px;
-                color: #fe0606;
+                color: #FB8500;
                 text-decoration: none;
-                font-size: 30px;
+                font-size: 2em;
+            }
+
+            .learn-more{
+                text-align: center;
+                font-size: 0.5em;
+                padding: 2em;
+                color: rgb(194, 103, 0);
             }
 
         }
@@ -3312,7 +3320,7 @@
                 position: absolute;
                 top: 0;
                 right: 15px;
-                color: #FFB703;
+                color: #FB8500;
                 text-decoration: none;
                 font-size: 30px;
             }
