--- a/index.html
+++ b/index.html
@@ -2019,8 +2019,9 @@
 
             .content {
                 position: absolute;
-                background: #219EBC;
-                width: 35vw;
+                background: #011f2f;
+                width: auto;
+                height: 50vh; 
                 padding: 1em 2em;
             }
 
@@ -2033,9 +2034,16 @@
                 position: absolute;
                 top: 0;
                 right: 15px;
-                color: #fe0606;
+                color: #FB8500;
                 text-decoration: none;
-                font-size: 30px;
+                font-size: 2em;
+            }
+
+            .learn-more{
+                text-align: center;
+                font-size: 0.5em;
+                padding: 2em;
+                color: rgb(194, 103, 0);
             }
         }
 
@@ -2838,7 +2846,7 @@
             }
 
             .skill-text {
-                font-size: 1em;
+                font-size: 1vh;
                 color: #FFB703;
                 text-align: left;
                 padding-left: 5px;
@@ -2855,7 +2863,7 @@
             }
 
             .project_desc {
-                font-size: 1em;
+                font-size: 1vh;
             }
 
             .about-me {
@@ -2957,7 +2965,7 @@
                 padding-bottom: 0.625em;
             }
 
-            p .project_desc {
+            .project_desc {
                 font-size: 1em;
                 font-family: 'Dosis', sans-serif;
                 font-family: 'Poppins', sans-serif;
