--- a/index.html
+++ b/index.html
@@ -1100,6 +1100,10 @@
                 font-size: 0.5em;
                 padding: 2em;
                 color: rgb(194, 103, 0);
+                font-family: 'Dosis', sans-serif;
+                font-family: 'Poppins', sans-serif;
+                font-family: 'Raleway', sans-serif;
+                font-family: 'Roboto Condensed', sans-serif;
             }
 
         }
@@ -2044,6 +2048,10 @@
                 font-size: 0.5em;
                 padding: 2em;
                 color: rgb(194, 103, 0);
+                font-family: 'Dosis', sans-serif;
+                font-family: 'Poppins', sans-serif;
+                font-family: 'Raleway', sans-serif;
+                font-family: 'Roboto Condensed', sans-serif;
             }
         }
 
@@ -2808,7 +2816,7 @@
             .project-box {
                 /* flex: 1 0 30%; */
                 width: 30vw;
-                height: 60vh;
+                height: auto;
                 padding: 5px;
                 display: inline-block;
                 padding: 5px;
@@ -3338,6 +3346,10 @@
                 font-size: 1em;
                 padding: 2em;
                 color: rgb(194, 103, 0);
+                font-family: 'Dosis', sans-serif;
+                font-family: 'Poppins', sans-serif;
+                font-family: 'Raleway', sans-serif;
+                font-family: 'Roboto Condensed', sans-serif;
             }
 
         }
