modified the form

--- a/index.html
+++ b/index.html
@@ -899,6 +899,8 @@
                 border-style: solid;
                 font-size: 12px;
                 padding-top: 2px;
+                height: 1vh; 
+                width: auto;
             }
 
             button {
@@ -907,14 +909,8 @@
                 margin-top: 0.5vh;
                 border-color: rgb(194, 103, 0);
                 border-width: 0.3em;
+                height: 1.5vh;
             }
-
-
-
-
-
-
-
 
             *,
             *:before,
@@ -1994,6 +1990,8 @@
                 border-style: solid;
                 font-size: 16px;
                 padding-top: 2.5px;
+                height: 1.5vh;
+                width: auto; 
             }
 
             button {
@@ -2002,6 +2000,7 @@
                 margin-top: 2vh;
                 border-color: rgb(194, 103, 0);
                 border-width: 0.5em;
+                height: 1.75vh;
             }
 
             .modal {
