--- a/index.html
+++ b/index.html
@@ -2814,8 +2814,8 @@
 
             .project-box {
                 /* flex: 1 0 30%; */
-                width: 30vw;
-                height: auto;
+                width: 32vw;
+                height: 60vh;
                 padding: 5px;
                 display: inline-block;
                 padding: 5px;
