--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@
             }
 
             button {
-                font-size: 1vh;
+                font-size: 12px;
                 text-decoration-color: #003652;
                 margin-top: 0.5vh;
                 border-color: rgb(194, 103, 0);
@@ -1995,7 +1995,7 @@
             }
 
             button {
-                font-size: 2vh;
+                font-size: 16px;
                 text-decoration-color: #003652;
                 margin-top: 2vh;
                 border-color: rgb(194, 103, 0);
@@ -3033,7 +3033,7 @@
             }
 
             button {
-                font-size: 2vh;
+                font-size: 18px;
                 text-decoration-color: #003652;
                 margin-top: 2vh;
                 border-color: rgb(194, 103, 0);
