--- a/index.html
+++ b/index.html
@@ -3135,6 +3135,7 @@
                 transform: none;
                 border: 2px solid #FFB703;
                 top: 170px;
+                animation: fade-in 3s;  
             }
 
             .wheel {
@@ -3150,6 +3151,7 @@
                 border: 2px solid #219EBC;
                 -webkit-border-radius: 0.5em;
                 border-radius: 0.5em;
+                animation: fade-in 3s; 
             }
 
             .wheel {
@@ -3157,6 +3159,7 @@
                 -moz-animation: mouse-wheel 0.6s linear infinite;
                 animation: mouse-wheel 0.6s linear infinite;
             }
+
 
             @-webkit-keyframes mouse-wheel {
                 0% {
