playing around with project heights

--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
             .project-box {
                 /* flex: 1 0 30%; */
                 width: auto;
-                height: 50vh;
+                height: 30vh;
                 padding: 5px;
                 padding: 5px;
                 border-radius: 10px;
@@ -933,6 +933,7 @@
                 -webkit-transform: rotate(45deg);
                 /* Chrome, Safari, Opera */
                 transform: rotate(45deg);
+                text-align: center;
 
                 border-right: 2px solid #FB8500;
                 border-bottom: 2px solid #FB8500;
@@ -954,6 +955,7 @@
                 -webkit-animation: mouse-scroll 1s infinite;
                 -moz-animation: mouse-scroll 1s infinite;
                 animation: mouse-scroll 1s infinite;
+                align-items: center;
 
             }
 
@@ -1597,8 +1599,8 @@
                 justify-content: center;
                 align-items: center;
                 /* height: 25em;*/
-                height: 40%;
-                width: 50%;
+                height: 50%;
+                width: 65%;
                 /*need to fix image proportions across different devices*/
                 border: 0.4em solid #0000;
                 background: linear-gradient(#219EBC, #011f2f) padding-box, linear-gradient(var(--angle),
@@ -1816,7 +1818,7 @@
             .project-box {
                 /* flex: 1 0 30%; */
                 width: auto;
-                height: 50vh;
+                height: 40vh;
                 padding: 5px;
                 padding: 5px;
                 border-radius: 10px;
@@ -2044,7 +2046,7 @@
 
             .learn-more{
                 text-align: center;
-                font-size: 0.5em;
+                font-size: 1em;
                 padding: 2em;
                 color: rgb(194, 103, 0);
                 font-family: 'Dosis', sans-serif;
