--- a/index.html
+++ b/index.html
@@ -510,8 +510,8 @@
                 justify-content: center;
                 align-items: center;
                 /* height: 25em;*/
-                height: 40%;
-                width: auto;
+                height: 75%;
+                width: 90%;
                 /*need to fix image proportions across different devices*/
                 border: 0.4em solid #0000;
                 background: linear-gradient(#219EBC, #011f2f) padding-box, linear-gradient(var(--angle),
@@ -729,7 +729,7 @@
             .project-box {
                 /* flex: 1 0 30%; */
                 width: auto;
-                height: 30vh;
+                height: 50vh;
                 padding: 5px;
                 padding: 5px;
                 border-radius: 10px;
@@ -821,7 +821,7 @@
 
             iframe {
                 width: 90%;
-                height: 40%;
+                height: 60%; 
             }
 
             .honors-cont {
@@ -1598,8 +1598,8 @@
                 justify-content: center;
                 align-items: center;
                 /* height: 25em;*/
-                height: 50%;
-                width: 65%;
+                height: 75;
+                width: 90%; 
                 /*need to fix image proportions across different devices*/
                 border: 0.4em solid #0000;
                 background: linear-gradient(#219EBC, #011f2f) padding-box, linear-gradient(var(--angle),
@@ -1612,8 +1612,8 @@
             }
 
             .box3 img {
-                width: 75%;
-                height: 50%;
+                width: 100%;
+                height: 100%;
                 object-fit: cover;
             }
 
@@ -1910,8 +1910,8 @@
             }
 
             iframe {
-                width: 50%;
-                height: 40%;
+                width: 90%;
+                height: 50%;
             }
 
             .honors-cont {
@@ -2594,8 +2594,8 @@
                 justify-content: center;
                 align-items: center;
                 /* height: 25em;*/
-                height: 50%;
-                width: 75%;
+                height: 75%;
+                width: 90%;
                 /*need to fix image proportions across different devices*/
                 border: 0.4em solid #0000;
                 background: linear-gradient(#219EBC, #011f2f) padding-box, linear-gradient(var(--angle),
@@ -2913,8 +2913,8 @@
             }
 
             iframe {
-                width: 75%;
-                height: 50%;
+                width: 90%;
+                height: 75%;
             }
 
             .honors-cont {
@@ -3367,7 +3367,7 @@
     <h1 class="line-1 anim-typewriter title"> SHRIYA BIDDALA </h1>
     <div class="roles"> A.I.-Nerd Engineer Student Web-Developer Equity-Activist Tech-Enthusiast</div>
 
-    <div class="mouse_scroll">
+    <div class="mouse_scroll" style: "align-items: center; margin: auto;">
         <div class="mouse" style="transition-delay: 3s;">
             <div class="wheel"></div>
         </div>
