fixed arrows and impage proportions

--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
 
             iframe {
                 width: 90%;
-                height: 60%; 
+                height: 55%; 
             }
 
             .honors-cont {
@@ -1598,8 +1598,8 @@
                 justify-content: center;
                 align-items: center;
                 /* height: 25em;*/
-                height: 75;
-                width: 90%; 
+                height: 45%;
+                width: 60%; 
                 /*need to fix image proportions across different devices*/
                 border: 0.4em solid #0000;
                 background: linear-gradient(#219EBC, #011f2f) padding-box, linear-gradient(var(--angle),
@@ -1910,8 +1910,8 @@
             }
 
             iframe {
-                width: 90%;
-                height: 50%;
+                width: 60%;
+                height: 45%;
             }
 
             .honors-cont {
@@ -2914,7 +2914,7 @@
 
             iframe {
                 width: 90%;
-                height: 75%;
+                height: 60%;
             }
 
             .honors-cont {
@@ -3368,13 +3368,13 @@
     <div class="roles"> A.I.-Nerd Engineer Student Web-Developer Equity-Activist Tech-Enthusiast</div>
 
     <div class="mouse_scroll" style: "align-items: center; margin: auto;">
-        <div class="mouse" style="transition-delay: 3s;">
+        <div class="mouse" style="transition-delay: 3s; align-items: center;">
             <div class="wheel"></div>
         </div>
         <div>
-            <span class="m_scroll_arrows one"></span>
-            <span class="m_scroll_arrows two"></span>
-            <span class="m_scroll_arrows three"></span>
+            <span class="m_scroll_arrows one" style = "align-self: center; "></span>
+            <span class="m_scroll_arrows two"> style = "align-self: center;"</span>
+            <span class="m_scroll_arrows three" style = "align-self: center;"></span>
         </div>
     </div>
 
