even more fixes

--- a/index.html
+++ b/index.html
@@ -2594,7 +2594,7 @@
                 justify-content: center;
                 align-items: center;
                 /* height: 25em;*/
-                height: 75%;
+                height: 60%;
                 width: 90%;
                 /*need to fix image proportions across different devices*/
                 border: 0.4em solid #0000;
@@ -2815,7 +2815,7 @@
             .project-box {
                 /* flex: 1 0 30%; */
                 width: 32vw;
-                height: 60vh;
+                height: 50vh;
                 padding: 5px;
                 display: inline-block;
                 padding: 5px;
@@ -3373,7 +3373,7 @@
         </div>
         <div>
             <span class="m_scroll_arrows one" style = "align-self: center; "></span>
-            <span class="m_scroll_arrows two"> style = "align-self: center;"</span>
+            <span class="m_scroll_arrows two" style = "align-self: center;"></span>
             <span class="m_scroll_arrows three" style = "align-self: center;"></span>
         </div>
     </div>
