fixed submit color

--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
                 font-size: 12px;
                 text-decoration-color: #003652;
                 margin-top: 0.5vh;
-                border-color: rgb(194, 103, 0);
+                border-color:#c99b26;
                 border-width: 0.3em;
             }
 
@@ -1999,8 +1999,8 @@
                 font-size: 16px;
                 text-decoration-color: #003652;
                 margin-top: 2vh;
-                border-color: rgb(194, 103, 0);
-                border-width: 0.5em;
+                border-color:#c99b26;
+                border-width: 0.3em;
             }
 
             .modal {
@@ -3036,8 +3036,8 @@
                 font-size: 18px;
                 text-decoration-color: #003652;
                 margin-top: 2vh;
-                border-color: rgb(194, 103, 0);
-                border-width: 0.5em;
+                border-color:#c99b26;
+                border-width: 0.3em;
             }
 
 
