--- a/index.html
+++ b/index.html
@@ -3671,7 +3671,7 @@
         </div>
     </div>
     <br>
-    <div class="fade-in2 center contact-me-cont">
+    <div class="fade-in2 center contact-me-cont" id = "Contact">
         <h2 style="text-align: center;"> <a href="#Home" class="link-orange"> CONTACT ME </a> </h2>
         <form method="POST"
             action="https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec">
@@ -3691,7 +3691,7 @@
 
 
     <div class="fade-in2 fa-3x contact">
-        <h2 class="contact-text" id="Contact"> <a href="#Home" class="link-orange" style="color:rgb(194, 103, 0)"> Let's
+        <h2 class="contact-text"> <a href="#Home" class="link-orange" style="color:rgb(194, 103, 0)"> Let's
                 Connect </a>
             <br>
         </h2>
