--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
                 border-style: solid;
                 font-size: 12px;
                 padding-top: 2px;
-                height: 1vh; 
+                height: 2vh; 
                 width: auto;
             }
 
@@ -3682,7 +3682,7 @@
             <br>
             <br>
             <input name="Subject" type="text" placeholder="Subject" required
-                style="background-color: #adeaff; text-decoration: #003652; height:auto; flex-direction: column; align-items: left; width: auto; text-overflow: break-word;">
+                style="background-color: #adeaff; text-decoration: #003652; height:auto; flex-direction: column; width: 40vw; text-overflow: break-word;">
             <br>
             <button type="submit" style=" background-color: #FFB703;">Send</button>
         </form>
