--- a/index.html
+++ b/index.html
@@ -3676,13 +3676,13 @@
         <form method="POST"
             action="https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec">
             <input name="Email" type="email" placeholder="Email" required
-                style="background-color: #adeaff; text-decoration: #003652;">
+                style="background-color: #adeaff; text-decoration: #003652; width:20vw;">
             <input name="Name" type="text" placeholder="Name" required
-                style="background-color: #adeaff; text-decoration: #003652;">
+                style="background-color: #adeaff; text-decoration: #003652; width:20vw;">
             <br>
             <br>
             <input name="Subject" type="text" placeholder="Subject" required
-                style="background-color: #adeaff; text-decoration: #003652; height:auto; flex-direction: column; width: 40vw; text-overflow: break-word;">
+                style="background-color: #adeaff; text-decoration: #003652; height:auto; flex-direction: column; width: 40vw; height: 20vh; text-overflow: break-word;">
             <br>
             <button type="submit" style=" background-color: #FFB703;">Send</button>
         </form>
