tesitng even more

--- a/index.html
+++ b/index.html
@@ -3682,7 +3682,7 @@
             <br>
             <br>
             <input name="Subject" type="text" placeholder="Subject" required
-                style="background-color: #adeaff; text-decoration: #003652; height:auto; flex-direction: column; width: 40vw; height: 20vh; text-overflow: break-word;">
+                style="background-color: #adeaff; text-decoration: #003652; height:auto; flex-direction: column; width: 40vw; height: 10vh; overflow-x: break-word;">
             <br>
             <button type="submit" style=" background-color: #FFB703;">Send</button>
         </form>
