--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                 justify-content: center;
                 align-items: center;
                 /* height: 25em;*/
-                height: 75%;
+                height: 60%;
                 width: 90%;
                 /*need to fix image proportions across different devices*/
                 border: 0.4em solid #0000;
@@ -873,7 +873,7 @@
                 transition: 0.1s;
             }
 
-            .fa-file:hover {
+            .fa-file:hover { 
                 color: #023047;
                 animation: none;
             }
@@ -899,7 +899,7 @@
                 border-style: solid;
                 font-size: 12px;
                 padding-top: 2px;
-                height: 2vh; 
+                height: auto; 
                 width: auto;
             }
 
@@ -1991,7 +1991,7 @@
                 border-style: solid;
                 font-size: 16px;
                 padding-top: 2.5px;
-                height: 1.5vh;
+                height: auto; 
                 width: auto; 
             }
 
@@ -2815,7 +2815,7 @@
             .project-box {
                 /* flex: 1 0 30%; */
                 width: 32vw;
-                height: 50vh;
+                height: 60vh;
                 padding: 5px;
                 display: inline-block;
                 padding: 5px;
