addressing mouse scroll on iphone

--- a/index.html
+++ b/index.html
@@ -917,11 +917,8 @@
                 -moz-box-sizing: border-box;
                 -webkit-box-sizing: border-box;
                 box-sizing: border-box;
+                align-items: center;
             }
-
-
-
-
 
             .m_scroll_arrows {
                 display: block;
@@ -932,7 +929,7 @@
                 -webkit-transform: rotate(45deg);
                 /* Chrome, Safari, Opera */
                 transform: rotate(45deg);
-                text-align: center;
+                align-items: center;
 
                 border-right: 2px solid #FB8500;
                 border-bottom: 2px solid #FB8500;
@@ -945,6 +942,7 @@
 
             .one {
                 margin-top: 1px;
+                align-items: center;
             }
 
             .one,
@@ -966,6 +964,7 @@
 
                 animation-direction: alternate;
                 animation-delay: alternate;
+                align-items: center;
             }
 
             .two {
@@ -976,7 +975,7 @@
 
                 animation-delay: 3.2s;
                 animation-direction: alternate;
-
+                align-items: center;
                 margin-top: -6px;
             }
 
@@ -989,7 +988,7 @@
                 animation-delay: 3.3s;
                 animation-direction: alternate;
 
-
+                align-items: center;
                 margin-top: -6px;
             }
 
@@ -2247,7 +2246,6 @@
                 text-align: right;
                 float: right;
                 margin: auto;
-
             }
 
             .right-oriented:hover {
