--- a/index.html
+++ b/index.html
@@ -3370,7 +3370,7 @@
             <div class="wheel"></div>
         </div>
         <div>
-            <span class="m_scroll_arrows one" style = "align-self: center; "></span>
+            <span class="m_scroll_arrows one" style = "align-items: center; "></span>
             <span class="m_scroll_arrows two" style = "align-self: center;"></span>
             <span class="m_scroll_arrows three" style = "align-self: center;"></span>
         </div>
