--- a/index.html
+++ b/index.html
@@ -2851,7 +2851,7 @@
             }
 
             .skill-text {
-                font-size: 1vh;
+                font-size: 10%;
                 color: #FFB703;
                 text-align: left;
                 padding-left: 5px;
