--- a/index.html
+++ b/index.html
@@ -901,6 +901,7 @@
                 padding-top: 2px;
                 height: auto; 
                 width: auto;
+                overflow-wrap: break-word; 
             }
 
             button {
@@ -1991,6 +1992,7 @@
                 font-size: 16px;
                 padding-top: 2.5px;
                 height: auto; 
+                overflow-wrap: break-word; 
                 width: auto; 
             }
 
@@ -3028,6 +3030,7 @@
                 font-size: 20px;
                 padding-top: 3px;
                 color: #011f2f;
+                overflow-wrap: break-word; 
             }
 
             button {
