fixing submit input

--- a/index.html
+++ b/index.html
@@ -902,6 +902,7 @@
                 height: auto; 
                 width: auto;
                 overflow-wrap: break-word; 
+                word-wrap: break-word;
             }
 
             button {
@@ -1993,6 +1994,7 @@
                 padding-top: 2.5px;
                 height: auto; 
                 overflow-wrap: break-word; 
+                word-wrap: break-word;
                 width: auto; 
             }
 
@@ -3031,6 +3033,7 @@
                 padding-top: 3px;
                 color: #011f2f;
                 overflow-wrap: break-word; 
+                word-wrap: break-word;
             }
 
             button {
