--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <script src="https://kit.fontawesome.com/fa913dc807.js" crossorigin="anonymous"></script>
 
     <style>
+        body{
+            margin: 0; 
+            padding: 0; 
+        }
         @media only screen and (max-width: 450px) {
             /*.container {
                 display: inline;
@@ -3596,6 +3600,60 @@
                     <div>
                         <p class="project-title" class="project-desc"> Developed portfolio website from scratch to showcase my
                     bio, education, projects, honors, and contact information. </p>
+                    </div>
+                    <br>
+                    <a href="#Projects" class="box-close">
+                        X
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="project-box">
+            <h3 style="color: #dcf4fc; margin: auto;">For Michigan Website</h3>
+            <div class="fade-in2 box3 ">
+                <!--<img src="My Projects.png">-->
+            </div>
+                <p class="project-text" style="color: #FB8500; text-align: left;">
+                    SKILLS:
+                </p>
+                <p class=" skill-text" style="text-align: left;"> HTML, CSS, JavaScript </p>
+            
+            <div class = "learn-more"><a href="#Portfolio" class="link-orange"> Click for More Information </a></div>
+            <div id="Portfolio" class="modal">
+                <div class="content">
+                    <h2 style="text-align: center; color: #8ECAE6;">
+                        A political organization website targeted towards Michigan college students aiming to increase voter engagement...
+                    </h2>
+                    <br>
+                    <div>
+                        <p class="project-title" class="project-desc"> Developed political organization portfolio website from scratch to have pages for college students at several Michigan universities to learn more information on how to vote. </p>
+                    </div>
+                    <br>
+                    <a href="#Projects" class="box-close">
+                        X
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="project-box">
+            <h3 style="color: #dcf4fc; margin: auto;">RoboPicasso</h3>
+            <div class="fade-in2 box3 ">
+                <img src="EdgeDetection.webp">
+            </div>
+                <p class="project-text" style="color: #FB8500; text-align: left;">
+                    SKILLS:
+                </p>
+                <p class=" skill-text" style="text-align: left;"> Python, OpenCV </p>
+            
+            <div class = "learn-more"><a href="#Portfolio" class="link-orange"> Click for More Information </a></div>
+            <div id="Portfolio" class="modal">
+                <div class="content">
+                    <h2 style="text-align: center; color: #8ECAE6;">
+                        An edge-detection program for an artistic robot... 
+                    </h2>
+                    <br>
+                    <div>
+                        <p class="project-title" class="project-desc"> Developed an application to perfom refined canny line detection to detect edges of objects in order to control a robot to draw out the outline. </p>
                     </div>
                     <br>
                     <a href="#Projects" class="box-close">
