--- a/index.html
+++ b/index.html
@@ -3608,6 +3608,7 @@
                 </div>
             </div>
         </div>
+    <div class="flex-container proj-box-cont add_margin">
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">For Michigan Website</h3>
             <div class="fade-in2 box3 ">
@@ -3617,7 +3618,6 @@
                     SKILLS:
                 </p>
                 <p class=" skill-text" style="text-align: left;"> HTML, CSS, JavaScript </p>
-            
             <div class = "learn-more"><a href="#Portfolio" class="link-orange"> Click for More Information </a></div>
             <div id="Portfolio" class="modal">
                 <div class="content">
@@ -3663,6 +3663,7 @@
             </div>
         </div>
     </div>
+    
 
     <div>
         <div class="next-to slideshow-container center fade-in2 honors-cont" id="Honors">
