fixed proj boxes

--- a/index.html
+++ b/index.html
@@ -959,7 +959,9 @@
                 -moz-animation: mouse-scroll 1s infinite;
                 animation: mouse-scroll 1s infinite;
                 align-items: center;
-
+                justify-content: center;
+                display: flex; 
+                align-self: center; 
             }
 
             .one {
@@ -3618,8 +3620,8 @@
                     SKILLS:
                 </p>
                 <p class=" skill-text" style="text-align: left;"> HTML, CSS, JavaScript </p>
-            <div class = "learn-more"><a href="#Portfolio" class="link-orange"> Click for More Information </a></div>
-            <div id="Portfolio" class="modal">
+            <div class = "learn-more"><a href="#ForMich" class="link-orange"> Click for More Information </a></div>
+            <div id="ForMich" class="modal">
                 <div class="content">
                     <h2 style="text-align: center; color: #8ECAE6;">
                         A political organization website targeted towards Michigan college students aiming to increase voter engagement...
@@ -3645,8 +3647,8 @@
                 </p>
                 <p class=" skill-text" style="text-align: left;"> Python, OpenCV </p>
             
-            <div class = "learn-more"><a href="#Portfolio" class="link-orange"> Click for More Information </a></div>
-            <div id="Portfolio" class="modal">
+            <div class = "learn-more"><a href="#Robo" class="link-orange"> Click for More Information </a></div>
+            <div id="Robo" class="modal">
                 <div class="content">
                     <h2 style="text-align: center; color: #8ECAE6;">
                         An edge-detection program for an artistic robot... 
