--- a/index.html
+++ b/index.html
@@ -924,6 +924,9 @@
                 -webkit-box-sizing: border-box;
                 box-sizing: border-box;
                 align-items: center;
+                justify-content: center;
+                text-align: center;
+                display: flex;
             }
 
             .m_scroll_arrows {
@@ -936,7 +939,9 @@
                 /* Chrome, Safari, Opera */
                 transform: rotate(45deg);
                 align-items: center;
-
+                justify-content: center;
+                display: flex; 
+                text-align: center;
                 border-right: 2px solid #FB8500;
                 border-bottom: 2px solid #FB8500;
                 margin: 0 0 3px 4px;
@@ -949,6 +954,10 @@
             .one {
                 margin-top: 1px;
                 align-items: center;
+                align-self: center; 
+                justify-content: center;
+                text-align: center;
+                display: flex; 
             }
 
             .one,
@@ -3766,7 +3775,7 @@
             </i></a>
         &nbsp; &nbsp; &nbsp; &nbsp;
         <a href="https://www.linkedin.com/in/shriya-biddala/"> <i
-                class="fab fa-align-center fa-linkedin fa-bounce fa-2x"> </i> </a>
+                class="fab fa-align-center fa-linkedin fa-bounce"> </i> </a>
         &nbsp; &nbsp; &nbsp; &nbsp;
         <a href="https://github.com/shriyabi"> <i class="fa-brands fa-github fa-bounce fa-2x"></i> </a>
         &nbsp; &nbsp; &nbsp; &nbsp;
