--- a/index.html
+++ b/index.html
@@ -917,16 +917,13 @@
                 border-width: 0.3em;
             }
 
-            *,
+            /*,
             *:before,
             *:after {
                 -moz-box-sizing: border-box;
                 -webkit-box-sizing: border-box;
                 box-sizing: border-box;
                 align-items: center;
-                justify-content: center;
-                text-align: center;
-                display: flex;
             }
 
             .m_scroll_arrows {
@@ -934,14 +931,12 @@
                 width: 5px;
                 height: 5px;
                 -ms-transform: rotate(45deg);
-                /* IE 9 */
+                 IE 9 
                 -webkit-transform: rotate(45deg);
-                /* Chrome, Safari, Opera */
+                 Chrome, Safari, Opera 
                 transform: rotate(45deg);
                 align-items: center;
-                justify-content: center;
-                display: flex; 
-                text-align: center;
+
                 border-right: 2px solid #FB8500;
                 border-bottom: 2px solid #FB8500;
                 margin: 0 0 3px 4px;
@@ -954,10 +949,6 @@
             .one {
                 margin-top: 1px;
                 align-items: center;
-                align-self: center; 
-                justify-content: center;
-                text-align: center;
-                display: flex; 
             }
 
             .one,
@@ -1084,7 +1075,7 @@
                 opacity: 0;
                 text-align: left;
                 margin-left: 5px;
-            }
+            } */
 
             .content {
                 position: absolute;
@@ -3618,6 +3609,7 @@
                     </a>
                 </div>
             </div>
+        </div>
         </div>
         <br>
     <div class="flex-container proj-box-cont add_margin">
