--- a/index.html
+++ b/index.html
@@ -3762,16 +3762,16 @@
             <br>
         </h2>
         <br>
-        <a href="https://www.instagram.com/shriya_bi/"><i class="fab fa-instagram fa-bounce fa-2x"
+        <a href="https://www.instagram.com/shriya_bi/"><i class="fab fa-instagram fa-bounce"
                 style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;">
             </i></a>
         &nbsp; &nbsp; &nbsp; &nbsp;
         <a href="https://www.linkedin.com/in/shriya-biddala/"> <i
                 class="fab fa-align-center fa-linkedin fa-bounce"> </i> </a>
         &nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="https://github.com/shriyabi"> <i class="fa-brands fa-github fa-bounce fa-2x"></i> </a>
+        <a href="https://github.com/shriyabi"> <i class="fa-brands fa-github fa-bounce"></i> </a>
         &nbsp; &nbsp; &nbsp; &nbsp;
-        <i class="fa-brands fa-google fa-bounce fa-2x"
+        <i class="fa-brands fa-google fa-bounce"
             style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;">
             <span class="google-hover-text"
                 style="color: #023047; font-size: 0.2em; font-family: 'Dosis', sans-serif;
@@ -3779,7 +3779,7 @@
                 School email: sbiddala@umich.edu <br> Personal email: shriyarbiddala@gmail.com</span>
         </i>
         <!-- &nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="https://docs.google.com/document/d/19FYQqBv_AlmTegdXhi0LBeTFt36PBHOe/edit?usp=sharing&ouid=107778612205876670747&rtpof=true&sd=true"> <i class="fa-regular fa-file fa-bounce fa-2x">
+        <a href="https://docs.google.com/document/d/19FYQqBv_AlmTegdXhi0LBeTFt36PBHOe/edit?usp=sharing&ouid=107778612205876670747&rtpof=true&sd=true"> <i class="fa-regular fa-file fa-bounce">
             <span class="file-lines-text"
                 style="color: #023047; font-size: 0.2em; font-family: 'Dosis', sans-serif;
             font-family: 'Poppins', sans-serif; font-family: 'Raleway', sans-serif;  font-family: 'Roboto Condensed', sans-serif; border-radius: 6px; box-shadow: 0 0 4em #023047;">
