--- a/index.html
+++ b/index.html
@@ -3656,7 +3656,7 @@
             <div id="Robo" class="modal">
                 <div class="content">
                     <h2 style="text-align: center; color: #8ECAE6;">
-                        An fine-tuned program to precisely detect edges of various objects...
+                        A fine-tuned program to precisely detect edges of various objects...
                     </h2>
                     <br>
                     <div>
