--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,7 @@
                 100% {
                     opacity: 1;
                 }
-            }
+            } */
 
             .modal {
                 align-items: center;
@@ -1076,7 +1076,7 @@
                 opacity: 0;
                 text-align: left;
                 margin-left: 5px;
-            } */
+            } 
 
             .content {
                 position: absolute;
@@ -1097,6 +1097,7 @@
                 right: 15px;
                 color: #FB8500;
                 text-decoration: none;
+                font-family: 'Times New Roman', Times, serif;
                 font-size: 2em;
             }
 
@@ -2049,6 +2050,7 @@
                 right: 15px;
                 color: #FB8500;
                 text-decoration: none;
+                font-family: 'Times New Roman', Times, serif;
                 font-size: 2em;
             }
 
@@ -3351,6 +3353,7 @@
                 right: 15px;
                 color: #FB8500;
                 text-decoration: none;
+                font-family: 'Times New Roman', Times, serif;
                 font-size: 30px;
             }
 
