adding image to formichigan

--- a/index.html
+++ b/index.html
@@ -3624,7 +3624,7 @@
         <div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;"> For Michigan Website</h3>
             <div class="fade-in2 box3 ">
-                <!--<img src="aihandwritingmodel.png">--> 
+                <img src="ForMichigan.png">
             </div>
 
             <p class="project-text" style="color: #FB8500; text-align: left;"> SKILLS:</p>
