--- a/index.html
+++ b/index.html
@@ -3637,7 +3637,7 @@
                         An interactive website for an organization aiming to increase voter turnout among college students...
                     </h2>
                     <br>
-                    <p class="project-desc"> The official website for the For Michigan non-profit organization, embedded with interactive features, such as color changing background on click, and personalized voting information pages for each college. 
+                    <p class="project-desc"> The official website for the For Michigan non-profit organization, embedded with interactive features, such as color changing background on click, and personalized voting information pages for each college. Check it out at www.4mich.org.
                     </p>
                     <br>
                     <a href="#Projects" class="box-close">
