--- a/index.html
+++ b/index.html
@@ -3412,7 +3412,7 @@
             </p>
         </div>
 
-        <div class="fade-in1 box box-dim">
+        <div class="fade-in1 box box-dim" style = "vertical-align: middle;">
             <img src="shriya_pfp.png">
             <!--style="transition-delay: 2.5s;"-->
         </div>
