fixed spacing between icons

--- a/index.html
+++ b/index.html
@@ -3797,12 +3797,12 @@
         <a href="https://www.instagram.com/shriya_bi/"><i class="fab fa-instagram fa-bounce"
                 style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;">
             </i></a>
-        &nbsp; &nbsp; &nbsp; 
+        &nbsp; &nbsp;
         <a href="https://www.linkedin.com/in/shriya-biddala/"> <i class="fab fa-align-center fa-linkedin fa-bounce">
             </i> </a>
-        &nbsp; &nbsp; &nbsp;
+        &nbsp; &nbsp; 
         <a href="https://github.com/shriyabi"> <i class="fa-brands fa-github fa-bounce"></i> </a>
-        &nbsp; &nbsp; &nbsp;
+        &nbsp; &nbsp;
         <i class="fa-brands fa-google fa-bounce"
             style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; text-align: center;">
             <span class="google-hover-text"
