fixed contact me form

--- a/index.html
+++ b/index.html
@@ -3773,14 +3773,14 @@
         <h2 style="text-align: center;"> <a href="#Home" class="link-orange"> CONTACT ME </a> </h2>
         <form method="POST"
             action="https://script.google.com/macros/s/AKfycbxhIvwwLpW00ff88bdzD-H8VeBugqDUMoqnWnw7AedoW5n0omP3Qa-28d7fBmbM7DY/exec">
-            <input name="Email" type="email" placeholder="Email" required
+            <input name="Email" type="email" placeholder="EMAIL" required
                 style="background-color: #adeaff; text-decoration: #003652; width:19.5vw;">
-            <input name="Name" type="text" placeholder="Name" required
+            <input name="Name" type="text" placeholder="NAME" required
                 style="background-color: #adeaff; text-decoration: #003652; width:19.5vw;">
             <br>
             <br>
-            <input name="Subject" type="text" placeholder="Subject" required
-                style="background-color: #adeaff; text-decoration: #003652; height:auto; flex-direction: column; width: 40vw; height: 10vh; overflow-x: break-word;">
+            <textarea name="Subject" type="text" placeholder="SUBJECT" required
+                style="background-color: #adeaff; text-decoration: #003652; height:auto; flex-direction: column; width: 40vw; height: 10vh; overflow-x: break-word;"></textarea>
             <br>
             <button type="submit" style=" background-color: #FFB703;">Send</button>
         </form>
