--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Shriya Biddala </title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link rel="icon" type="image/png" href="SbLogo.png">
+    <link rel="icon" type="image/png" href="SB_Logo.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
