--- a/index.html
+++ b/index.html
@@ -3375,7 +3375,7 @@
 
 
 <body>
-    <h4 id="Home"> <a href="Projects" class="link-orange"> PROJECTS </a> &nbsp; &nbsp; &nbsp; &nbsp; <a href="#Honors"
+    <h4 id="Home"> <a href="#Projects" class="link-orange"> PROJECTS </a> &nbsp; &nbsp; &nbsp; &nbsp; <a href="#Honors"
             class="link-orange"> HONORS </a> &nbsp;
         &nbsp; &nbsp; &nbsp; <a href="#Contact" class="link-orange"> CONTACT </a> </h4>
     <h3 style="text-align: center"> Hello! I am </h3>
