--- a/index.html
+++ b/index.html
@@ -910,6 +910,22 @@
                 overflow-wrap: break-word;
                 word-wrap: break-word;
             }
+            textarea{
+                font-family: 'Dosis', sans-serif;
+                font-family: 'Poppins', sans-serif;
+                font-family: 'Raleway', sans-serif;
+                font-family: 'Roboto Condensed', sans-serif;
+                border-color: #011f2f;
+                border-width: 0.3em;
+                text-decoration-color: #011f2f;
+                border-style: solid;
+                font-size: 12px;
+                padding-top: 2px;
+                overflow-wrap: break-word;
+                word-wrap: break-word;
+                height:auto; 
+                width: 50vw; 
+            }
 
             button {
                 font-size: 12px;
@@ -2005,6 +2021,27 @@
                 overflow-wrap: break-word;
                 word-wrap: break-word;
                 width: auto;
+                font-family: 'Dosis', sans-serif;
+                font-family: 'Poppins', sans-serif;
+                font-family: 'Raleway', sans-serif;
+                font-family: 'Roboto Condensed', sans-serif;
+            }
+
+            textarea{
+                font-family: 'Dosis', sans-serif;
+                font-family: 'Poppins', sans-serif;
+                font-family: 'Raleway', sans-serif;
+                font-family: 'Roboto Condensed', sans-serif;
+                border-color: #011f2f;
+                border-width: 0.2em;
+                text-decoration-color: #011f2f;
+                border-style: solid;
+                font-size: 16px;
+                padding-top: 2.5px;
+                overflow-wrap: break-word;
+                word-wrap: break-word;
+                height:auto; 
+                width: 70vw; 
             }
 
             button {
@@ -3044,6 +3081,22 @@
                 color: #011f2f;
                 overflow-wrap: break-word;
                 word-wrap: break-word;
+            }
+            textarea{
+                font-family: 'Dosis', sans-serif;
+                font-family: 'Poppins', sans-serif;
+                font-family: 'Raleway', sans-serif;
+                font-family: 'Roboto Condensed', sans-serif;
+                border-color: #011f2f;
+                border-width: 0.3em;
+                text-decoration-color: #011f2f;
+                border-style: solid;
+                font-size: 20px;
+                padding-top: 3px;
+                overflow-wrap: break-word;
+                word-wrap: break-word;
+                height:auto; 
+                width: 80vw; 
             }
 
             button {
