--- a/index.html
+++ b/index.html
@@ -3574,7 +3574,7 @@
                 </div>
             </div>
         </div>
-        <div class="project-box">
+        <!--<div class="project-box">
             <h3 style="color: #dcf4fc; margin: auto;">Chatbot for Mental Health Awareness</h3>
             <iframe style="color:rgb(197, 105, 1);" src="https://www.wevideo.com/view/3252017933"
                 style="margin: auto; margin-top: 2vh;"> </iframe>
@@ -3827,7 +3827,7 @@
                     </a>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
 
